--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,13 @@
 {
-	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2022",
-		"checkJs": false,  /* Typecheck .js files. */
-		"lib": [
-			"ES2022"
-		]
-	},
-	"exclude": [
-		"node_modules"
-	]
+  "compilerOptions": {
+    "checkJs": false, /* Typecheck .js files. */
+    "lib": [
+      "ES2022"
+    ],
+    "module": "Node16",
+    "target": "ES2022"
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
