--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "markdown-auto-bullets",
-  "displayName": "Markdown Automatic Bullet Points",
-  "description": "Markdown Automatic Bullet Points",
-  "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.101.0"
-  },
+  "activationEvents": [],
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
-  "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "markdown-auto-bullets.helloWorld",
-      "title": "Hello World"
-    }]
+    "commands": [
+      {
+        "command": "markdown-auto-bullets.helloWorld",
+        "title": "Hello World"
+      }
+    ]
   },
+  "description": "Markdown Automatic Bullet Points",
+  "devDependencies": {
+    "@types/mocha": "^10.0.10",
+    "@types/node": "20.x",
+    "@types/vscode": "^1.101.0",
+    "@vscode/test-cli": "^0.0.10",
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.25.1"
+  },
+  "displayName": "Markdown Automatic Bullet Points",
+  "engines": {
+    "vscode": "^1.101.0"
+  },
+  "main": "./extension.js",
+  "name": "markdown-auto-bullets",
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "vscode-test"
   },
-  "devDependencies": {
-    "@types/vscode": "^1.101.0",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
-    "eslint": "^9.25.1",
-    "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.5.2"
-  }
+  "version": "0.0.1"
 }
