--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,3 +8,7 @@ vsc-extension-quickstart.md
 **/*.map
 **/eslint.config.mjs
 **/.vscode-test.*
+vsc-extension-quickstart.md
+.vscode-test.mjs
+*.vsix
+build/**
