Add onDidChangeActiveTextEditor and onDidChangeTextDocument events; general refactors

--- a/package.json
+++ b/package.json
@@ -24,18 +24,12 @@
     "Formatters"
   ],
   "activationEvents": [
+    "onDidChangeActiveTextEditor",
+    "onDidChangeTextDocument",
     "onLanguage:markdown"
   ],
   "browser": "./src/extension.js",
-  "main": "./extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "type",
-        "title": "Intercept Typing Event"
-      }
-    ]
-  },
+  "main": "./src/extension.js",
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
