Change onDidChangeTextDocument event to onDidOpenTextDocument; added properties to package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "activationEvents": [
     "onDidChangeActiveTextEditor",
-    "onDidChangeTextDocument",
+    "onDidOpenTextDocument",
     "onLanguage:markdown"
   ],
   "browser": "./src/extension.js",
