--- a/package.json
+++ b/package.json
@@ -1,8 +1,28 @@
 {
-  "name": "markdown-auto-bullets",
+  "activationEvents": [
+    "onDidChangeActiveTextEditor",
+    "onDidOpenTextDocument",
+    "onLanguage:markdown"
+  ],
   "author": "Jason Lonsberry",
-  "displayName": "Markdown Automatic Bullet Points",
+  "browser": "./src/extension.js",
+  "categories": [
+    "Formatters"
+  ],
   "description": "Automatically add bullet points when editing in Markdown.",
+  "devDependencies": {
+    "@types/mocha": "^10.0.10",
+    "@types/node": "20.x",
+    "@types/vscode": "^1.101.0",
+    "@vscode/test-cli": "^0.0.10",
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.25.1"
+  },
+  "displayName": "Markdown Automatic Bullet Points",
+  "engines": {
+    "vscode": "^1.101.0"
+  },
+  "homepage": "https://github.com/transce080/vscode-markdown-auto-bullets",
   "keywords": [
     "auto",
     "automated",
@@ -10,38 +30,20 @@
     "list",
     "md"
   ],
-  "license": "SEE LICENSE IN ./LICENSE",
+  "license": "AGPL-3.0-or-later",
+  "main": "./src/extension.js",
+  "name": "markdown-auto-bullets",
   "publisher": "jason-lonsberry",
   "repository": {
     "type": "git",
-    "url": "https://github.com/transce080/vscode-markdown-auto-bullets/"
+    "url": "https://github.com/transce080/vscode-markdown-auto-bullets"
   },
-  "version": "1.0.0",
-  "engines": {
-    "vscode": "^1.101.0"
-  },
-  "categories": [
-    "Formatters"
-  ],
-  "activationEvents": [
-    "onDidChangeActiveTextEditor",
-    "onDidOpenTextDocument",
-    "onLanguage:markdown"
-  ],
-  "browser": "./src/extension.js",
-  "main": "./src/extension.js",
   "scripts": {
+    "build": "mkdir -p deploy && npx vsce package --no-dependencies && mv -f *.vsix deploy/",
     "lint": "eslint .",
+    "lint-debug": "eslint --debug .",
     "pretest": "npm run lint",
-    "test": "vscode-test",
-    "build": "mkdir -p deploy && npx vsce package --no-dependencies && mv *.vsix deploy/"
+    "test": "vscode-test"
   },
-  "devDependencies": {
-    "@types/vscode": "^1.101.0",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
-    "eslint": "^9.25.1",
-    "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.5.2"
-  }
+  "version": "1.0.0"
 }
