--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "activationEvents": [
+    "onCommand:markdown-auto-bullets.deleteLeft",
     "onDidChangeActiveTextEditor",
     "onDidOpenTextDocument",
     "onLanguage:markdown"
@@ -9,10 +10,17 @@
   "categories": [
     "Formatters"
   ],
+  "contributes": {
+    "keybindings": [
+      {
+        "command": "markdown-auto-bullets.deleteLeft",
+        "key": "backspace",
+        "when": "editorTextFocus"
+      }
+    ]
+  },
   "description": "Automatically add bullet points when editing in Markdown.",
   "devDependencies": {
-    "@types/mocha": "^10.0.10",
-    "@types/node": "20.x",
     "@types/vscode": "^1.101.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
@@ -40,10 +48,11 @@
   },
   "scripts": {
     "build": "mkdir -p deploy && npx vsce package --no-dependencies && mv -f *.vsix deploy/",
+    "deploy": "npx vsce publish --no-dependencies",
     "lint": "eslint .",
     "lint-debug": "eslint --debug .",
     "pretest": "npm run lint",
     "test": "vscode-test"
   },
-  "version": "1.0.0"
+  "version": "1.1.0"
 }
