--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       {
         "command": "markdown-auto-bullets.deleteLeft",
         "key": "backspace",
-        "when": "editorTextFocus"
+        "when": "editorTextFocus && editorLangId == markdown"
       }
     ]
   },
@@ -54,5 +54,5 @@
     "pretest": "npm run lint",
     "test": "vscode-test"
   },
-  "version": "1.1.0"
+  "version": "1.1.1"
 }
