Update configs; update packages; bump version to 1.2.1

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,10 @@
 .gitignore
+.vscode-test*
 .vscode-test/**
 .vscode/**
-**/.vscode-test.*
-**/*.map
-**/eslint.config.mjs
-**/jsconfig.json
-deploy/**
+*.code-workspace
+build/**
+eslint.config.mjs
+jsconfig.json
+node_modules/**
 test/**
