--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,8 @@
 {
   "compilerOptions": {
-    "lib": [
-      "ES2022"
-    ],
+    "lib": ["ES2022"],
     "module": "Node16",
     "target": "ES2022"
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": [".vscode-test", "build", "node_modules"]
 }
