--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   },
   "description": "Automatically add bullet points when editing in Markdown.",
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@eslint/json": "^0.13.2",
     "@types/vscode": "^1.101.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
-    "eslint": "^9.25.1"
+    "@vscode/vsce": "^3.6.2",
+    "eslint": "^9.37.0",
+    "shx": "^0.4.0",
+    "vscode-test": "^1.6.1"
   },
   "displayName": "Markdown Automatic Bullet Points",
   "engines": {
@@ -47,12 +52,13 @@
     "url": "https://github.com/transce080/vscode-markdown-auto-bullets"
   },
   "scripts": {
-    "build": "mkdir -p deploy && npx vsce package --no-dependencies && mv -f *.vsix deploy/",
-    "deploy": "npx vsce publish --no-dependencies",
+    "auth": "npx vsce login jason-lonsberry",
+    "build": "shx mkdir -p build && npm run package && shx mv -f *.vsix build/",
     "lint": "eslint .",
-    "lint-debug": "eslint --debug .",
+    "package": "npx vsce package --no-dependencies",
     "pretest": "npm run lint",
+    "publish": "npx vsce publish --no-dependencies",
     "test": "vscode-test"
   },
-  "version": "1.1.1"
+  "version": "1.2.1"
 }
